CloudCover_prototype_testbed/anvResearch-main/kube_scripts/SWTest/checkout.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout # Modify this line with the service name
  labels:
    app: checkout # Modify this line with the service name
    service: checkout # Modify this line with the service name
spec:
  ports:
  - port: 9092  # Modify this line with the listening port number
    name: http
  selector:
    app: checkout # Modify this line with the service name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout # Modify this line with the service name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout # Modify this line with the service name
  template:
    metadata:
      labels:
        app: checkout # Modify this line with the service name
    spec:
      nodeSelector:
        appName: checkout 
      terminationGracePeriodSeconds: 0
      serviceAccountName: checkout # Modify this line with the service name
      containers:
      - name: checkout # Modify this line with the service name
        image: <REPONAME>/checkout
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
