CloudCover_prototype_testbed/anvResearch-main/kube_scripts/SWTest/payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment # Modify this line with the service name
  labels:
    app: payment # Modify this line with the service name
    service: payment # Modify this line with the service name
spec:
  ports:
  - port: 9093  # Modify this line with the listening port number
    name: http
  selector:
    app: payment # Modify this line with the service name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment # Modify this line with the service name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment # Modify this line with the service name
  template:
    metadata:
      labels:
        app: payment # Modify this line with the service name
    spec:
      nodeSelector:
        appName: payment 
      terminationGracePeriodSeconds: 0
      serviceAccountName: payment # Modify this line with the service name
      containers:
      - name: payment # Modify this line with the service name
        image: <REPONAME>/payment
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
